infra/k8s/runner/overlays/stage/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-manager
  namespace: runner
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: pod-manager
